Fix text overflow in map descriptions

--- a/app/assets/stylesheets/common/map-card.css.scss
+++ b/app/assets/stylesheets/common/map-card.css.scss
@@ -104,6 +104,7 @@ $sEditButtonSize: 50px;
   flex: 1;
   width: 100%;
   height: 40px;
+  min-width: 0;
 
   .DefaultDescription {
     @include line-clamp(2);
